--- a/src/rust-consulting.njk
+++ b/src/rust-consulting.njk
@@ -186,7 +186,7 @@ og:
             "url": 'https://github.com/mainmatter/gerust'
             }
           %}
-          {{ btnSecondary( link, 'mt-2 link-purple' ) }}
+          {{ btnSecondary( link, 'link-purple' ) }}
         </div>
       </li>
       <li class="opensource-list__project">
@@ -207,7 +207,7 @@ og:
             "url": 'https://github.com/mainmatter/100-exercises-to-learn-rust'
             }
           %}
-          {{ btnSecondary( link, 'mt-2 link-purple' ) }}
+          {{ btnSecondary( link, 'link-purple' ) }}
         </div>
       </li>
       <li class="opensource-list__project">
@@ -229,7 +229,7 @@ og:
             "url": 'https://github.com/mainmatter/cargo-autoinherit'
             }
           %}
-          {{ btnSecondary( link, 'mt-2 link-purple' ) }}
+          {{ btnSecondary( link, 'link-purple' ) }}
         </div>
       </li>
     </ul>
