--- a/src/components/color-hero.njk
+++ b/src/components/color-hero.njk
@@ -11,8 +11,6 @@ content: A content block with the following options:
   text: String or markup for body text
   linkUrl: Optional link destination
   linkText: Optional link text
-  contentType: Width of the container; normally set to container--lg on all hero sections. 
-  Landing page hero sections are indicated via setting ContentType to "lp". 
 
 Example usage:
 {% set content = {
@@ -29,11 +27,9 @@ Example usage:
 {{ colorHero('blue', content) }}
 #}
 {% from "cta-link.njk" import ctaLink %}
-{% from "btn-secondary.njk" import btnSecondary %}
-
 {%- macro colorHero(color, content) -%}
   <section
-    class="color-hero color-hero--{{ color }} {% if content.class %}{{ content.class }}{% endif %}{% if content.logo %}{{ content.logo }}{% elseif content.background %}{{ content.background }}{% endif %}{% if content.containerType == "lp" %}color-hero__LP{% endif %}"
+    class="color-hero color-hero--{{ color }} {% if content.class %}{{ content.class }}{% endif %}{% if content.logo %}{{ content.logo }}{% elseif content.background %}{{ content.background }}{% endif %}"
     data-background-color="{{ color }}"
   >
     {% if content.image %}
@@ -42,13 +38,7 @@ Example usage:
       </div>
       <div class="color-hero__overlay"></div>
     {% endif %}
-    <div
-      class=" container container--xl {% if content.containerType == "lp" %}
-        color-hero__container__LP container__LP container--lg
-      {% else %}
-        color-hero__container container--lg
-      {% endif %}"
-    >
+    <div class="color-hero__container container container--lg">
       <div class="color-hero__main">
         {% if content.eyebrow %}
           <p class="color-hero__eyebrow h5">{{ content.eyebrow | safe }}</p>
@@ -60,29 +50,10 @@ Example usage:
           <p class="color-hero__subheading caption">{{ content.subheading | safe }}</p>
         {% endif %}
         {% if content.text %}
-          <div
-            class="{% if content.containerType == "lp" %}medium{% else %}color-hero__text{% endif %} mt-2"
-          >
-            {{ content.text | safe }}
-          </div>
+          <div class="color-hero__text mt-2">{{ content.text | safe }}</div>
         {% endif %}
         {% if content.linkUrl %}
           {{ ctaLink(content.linkUrl, content.linkText, 'color-hero__link') }}
-        {% endif %}
-        {% if content.toc %}
-          <div class="table-of-contents__list container--xl mt-2">
-            {% for text, anchor in content.toc %}
-              <div class="{% if loop.index == 1 %}desktop-hidden{% endif %}">
-                {%-
-                  set link = {
-                  "label": text,
-                  "url": anchor
-                  }
-                -%}
-                {{- btnSecondary(link, '', true) -}}
-              </div>
-            {% endfor %}
-          </div>
         {% endif %}
       </div>
     </div>
