Revert "Revert "Rust lp redesign""

--- a/src/assets/css/base/_global.scss
+++ b/src/assets/css/base/_global.scss
@@ -185,6 +185,14 @@ a {
     text-underline-offset: 0.25rem;
     text-decoration-color: inherit;
   }
+
+  &.link-black {
+    color: var(--color-body-text);
+  }
+
+  &.link-purple {
+    color: var(--color-purple);
+  }
 }
 
 button {
@@ -197,6 +205,22 @@ button {
 
   [data-background-color="purple"] & {
     background-color: var(--color-aqua);
+  }
+}
+
+.color- {
+  &white {
+    color: var(--color-white) !important;
+  }
+}
+
+.background- {
+  &aqua {
+    background-color: var(--color-aqua);
+  }
+
+  &white {
+    background-color: var(--color-white);
   }
 }
 
