--- a/src/assets/css/app.scss
+++ b/src/assets/css/app.scss
@@ -46,6 +46,7 @@
 @use "components/image-banner-with-text";
 @use "components/text-with-list";
 @use "components/image-aspect-ratio";
+@use "components/image-aspect-ratio-with-button";
 @use "components/work";
 @use "components/recent-posts";
 @use "components/split-content";
@@ -59,6 +60,7 @@
 @use "components/scroll-slides";
 @use "components/quotes-list";
 @use "components/tech-cards";
+@use "components/service-cards";
 @use "components/case-cards";
 @use "components/strategy-list";
 @use "components/cta-banner";
@@ -68,6 +70,7 @@
 @use "components/images-side-by-side-grid";
 @use "components/grid-event-card";
 @use "components/form-with-image";
+@use "components/table-of-contents";
 
 @use "animations/text-animation";
 
