--- a/src/components/contact-form-LP.njk
+++ b/src/components/contact-form-LP.njk
@@ -1,4 +1,5 @@
 {% from "global/invisible-captcha.njk" import invisibleCaptcha %}
+{% from "global/li-fat-id.njk" import liFatId %}
 
 <section class="contact-form color-hero color-hero--purple" data-background-color="purple">
   <div class="contact-form__container">
@@ -115,6 +116,7 @@
           </div>
         </div>
         {{ invisibleCaptcha() }}
+        {{ liFatId() }}
       </form>
     </div>
   </div>
