--- a/src/components/contact-form.njk
+++ b/src/components/contact-form.njk
@@ -1,5 +1,6 @@
 {% from "social-list.njk" import socialList %}
 {% from "global/invisible-captcha.njk" import invisibleCaptcha %}
+{% from "global/li-fat-id.njk" import liFatId %}
 
 <section class="contact-form color-hero color-hero--purple" data-background-color="purple">
   <div class="contact-form__container">
@@ -135,6 +136,7 @@
           </div>
         </div>
         {{ invisibleCaptcha() }}
+        {{ liFatId() }}
       </form>
 
       <h4 class="mt-10">Other ways to reach out</h4>
