--- a/src/rust-consulting.njk
+++ b/src/rust-consulting.njk
@@ -126,7 +126,7 @@ og:
     {%
       set link = {
       "label": 'Rewriting Redis Query Engine in Rust, one C module at a time',
-      "url": '/work#redis'
+      "url": '/work#anondb'
       }
     %}
     {{ btnSecondary( link, 'mt-2' ) }}
