--- a/src/rust-subscription.njk
+++ b/src/rust-subscription.njk
@@ -159,7 +159,7 @@ og:
   </div>
 </section>
 
-{% set clients = ['aleph-alpha', 'kisters', 'bmw-car-it', 'redis'] %}
+{% set clients = ['aleph-alpha', 'kisters', 'bmw-car-it', 'anondb'] %}
 {{ featuredCaseStudies(clients, 'Browse our work') }}
 {%
   set 'content' = {
