--- a/src/work.njk
+++ b/src/work.njk
@@ -27,12 +27,12 @@ og:
 <div class="work container container--xl">
   <h2 class="work__title h5">Meet our clients</h2>
   <ul class="work__list">
-    {{ featuredCaseStudy('redis', 'black', 'work__featured-case-study') }}
-    {{ clientCards(['redis', 'qonto']) }}
+    {{ featuredCaseStudy('anondb', 'black', 'work__featured-case-study') }}
+    {{ clientCards(['trainline', 'qonto']) }}
     {{ featuredCaseStudy('rail-europe', 'purple', 'work__featured-case-study') }}
     {{ clientCards(['auditboard', 'xbav']) }}
     {{ featuredCaseStudy('qonto', 'purple', 'work__featured-case-study') }}
-    {{ clientCards(['bmw-car-it', 'trainline']) }}
+    {{ clientCards(['bmw-car-it', 'anondb']) }}
     {{ featuredCaseStudy('kisters', 'black', 'work__featured-case-study') }}
     {{ clientCards(['ais', 'timify']) }}
     {{ featuredCaseStudy('trainline', 'purple', 'work__featured-case-study') }}
