shorten contact form field names

--- a/src/travel.njk
+++ b/src/travel.njk
@@ -83,11 +83,11 @@ og:
                 id="name"
                 type="text"
                 name="name"
-                placeholder="Your name"
+                placeholder="Name"
                 required
               />
               <label class="contact-form__label h4" for="name">
-                Your name
+                Name
                 <span class="screenreader">(Required)</span>
               </label>
               <span class="contact-form__label-required" aria-hidden="true">Required</span>
@@ -98,9 +98,9 @@ og:
                 id="company"
                 type="text"
                 name="company"
-                placeholder="Your company's name"
+                placeholder="Company name"
               />
-              <label class="contact-form__label h4" for="name"> Your company's name </label>
+              <label class="contact-form__label h4" for="name">Company name </label>
             </div>
             <div class="contact-form__field cta__input mb-2 mt-2">
               <input
@@ -108,11 +108,11 @@ og:
                 id="email"
                 type="email"
                 name="email"
-                placeholder="Your e-mail"
+                placeholder="E-mail"
                 required
               />
               <label class="contact-form__label h4" for="email">
-                Your e-mail
+                E-mail
                 <span class="screenreader">(Required)</span>
               </label>
               <span class="contact-form__label-required" aria-hidden="true">Required</span>
@@ -269,11 +269,11 @@ og:
               id="name"
               type="text"
               name="name"
-              placeholder="Your name"
+              placeholder="Name"
               required
             />
             <label class="contact-form__label h4" for="name">
-              Your name
+              Name
               <span class="screenreader">(Required)</span>
             </label>
             <span class="contact-form__label-required" aria-hidden="true">Required</span>
@@ -284,9 +284,9 @@ og:
               id="company"
               type="text"
               name="company"
-              placeholder="Your company's name"
+              placeholder="Company name"
             />
-            <label class="contact-form__label h4" for="name"> Your company's name </label>
+            <label class="contact-form__label h4" for="name">Company name </label>
           </div>
           <div class="contact-form__field cta__input mb-2 mt-2">
             <input
@@ -294,11 +294,11 @@ og:
               id="email"
               type="email"
               name="email"
-              placeholder="Your e-mail"
+              placeholder="E-mail"
               required
             />
             <label class="contact-form__label h4" for="email">
-              Your e-mail
+              E-mail
               <span class="screenreader">(Required)</span>
             </label>
             <span class="contact-form__label-required" aria-hidden="true">Required</span>
