add referral source fields to contact forms

--- a/src/components/contact-form.njk
+++ b/src/components/contact-form.njk
@@ -78,6 +78,19 @@
             <label class="contact-form__label h4" for="service"> How can we help you? </label>
           </div>
           <div class="contact-form__field">
+            <input
+              class="contact-form__input"
+              id="contact-referral-source"
+              type="text"
+              name="referral_source"
+              placeholder="How did you find out about Mainmatter?"
+              required
+            />
+            <label class="contact-form__label h4" for="contact-referral-source">
+              How did you find out about Mainmatter?
+            </label>
+          </div>
+          <div class="contact-form__field">
             <textarea
               class="contact-form__input"
               id="contact-message"
