--- a/src/components/layouts/workshop.njk
+++ b/src/components/layouts/workshop.njk
@@ -169,6 +169,19 @@ layout: "base"
               <span class="contact-form__label-required" aria-hidden="true">Required</span>
             </div>
             <div class="contact-form__field">
+              <input
+                class="contact-form__input"
+                id="contact-referral-source"
+                type="text"
+                name="referral_source"
+                placeholder="How did you find out about Mainmatter?"
+                required
+              />
+              <label class="contact-form__label h4" for="contact-referral-source">
+                How did you find out about Mainmatter?
+              </label>
+            </div>
+            <div class="contact-form__field">
               <textarea
                 class="contact-form__input"
                 id="contact-message"
