--- a/src/components/subscription-signup-form.njk
+++ b/src/components/subscription-signup-form.njk
@@ -63,6 +63,19 @@
               </label>
               <span class="contact-form__label-required" aria-hidden="true">Required</span>
             </div>
+            <div class="contact-form__field">
+              <input
+                class="contact-form__input"
+                id="contact-referral-source"
+                type="text"
+                name="referral_source"
+                placeholder="How did you find out about Mainmatter?"
+                required
+              />
+              <label class="contact-form__label h4" for="contact-referral-source">
+                How did you find out about Mainmatter?
+              </label>
+            </div>
             <button class="btn-primary btn-primary--white" type="submit">
               <span>Get in touch</span>
               {% include 'svg/arrow.njk' %}
