anonymize Redis everywhere

--- a/src/work.njk
+++ b/src/work.njk
@@ -32,7 +32,7 @@ og:
     {{ featuredCaseStudy('rail-europe', 'purple', 'work__featured-case-study') }}
     {{ clientCards(['auditboard', 'xbav']) }}
     {{ featuredCaseStudy('qonto', 'purple', 'work__featured-case-study') }}
-    {{ clientCards(['bmw-car-it', 'anondb']) }}
+    {{ clientCards(['bmw-car-it', 'aleph-alpha']) }}
     {{ featuredCaseStudy('kisters', 'black', 'work__featured-case-study') }}
     {{ clientCards(['ais', 'timify']) }}
     {{ featuredCaseStudy('trainline', 'purple', 'work__featured-case-study') }}
@@ -52,14 +52,13 @@ og:
     {{ featuredCaseStudy('ddwrt', 'black', 'work__featured-case-study') }}
     {{ clientCards(['medify', 'experteer']) }}
     {{ featuredCaseStudy('timify', 'purple', 'work__featured-case-study') }}
-    {{ clientCards(['phorest', 'aleph-alpha']) }}
+    {{ clientCards(['phorest', 'clark']) }}
     {{ featuredCaseStudy('whirlwind', 'black', 'work__featured-case-study') }}
     {{ clientCards(['ringler', 'dim3']) }}
     {{ featuredCaseStudy('ais', 'purple', 'work__featured-case-study') }}
     {{ clientCards(['kisters', 'rail-europe']) }}
     {{ clientCards(['sage', 'mvb']) }}
     {{ clientCards(['camilyo', 'cardstack']) }}
-    {{ clientCards(['clark']) }}
   </ul>
 </div>
 
