add Tuition to Ember Initiative company logos

--- a/src/ember-initiative.njk
+++ b/src/ember-initiative.njk
@@ -68,7 +68,7 @@ og:
   </div>
 </section>
 
-{% set logoCompanies = ['ticketsolve', 'intercom', 'lighthouse', 'auditboard', 'crowdstrike', 'hashicorp', 'xbe', 'teamtailor', 'hotdoc', 'isaac-lee', 'solute', 'triptyk', 'ember-checkup', 'redpencil', 'productive', 'skovik', 'yapplabs', 'adfinis', 'emergent-tree'] %}
+{% set logoCompanies = ['ticketsolve', 'intercom', 'lighthouse', 'auditboard', 'crowdstrike', 'hashicorp', 'xbe', 'teamtailor', 'hotdoc', 'isaac-lee', 'solute', 'triptyk', 'ember-checkup', 'redpencil', 'productive', 'skovik', 'yapplabs', 'adfinis', 'emergent-tree', 'tuition'] %}
 {% set title = 'Companies that build on Ember join the Ember and Embroider initiatives' %}
 {{ logoList(logoCompanies, title) }}
 {%
