shorten referral source

--- a/src/components/contact-form.njk
+++ b/src/components/contact-form.njk
@@ -83,11 +83,11 @@
               id="contact-referral-source"
               type="text"
               name="referral_source"
-              placeholder="How did you find out about Mainmatter?"
+              placeholder="How did you find us?"
               required
             />
             <label class="contact-form__label h4" for="contact-referral-source">
-              How did you find out about Mainmatter?
+              How did you find us?
             </label>
           </div>
           <div class="contact-form__field">
