--- a/src/components/subscription-signup-form.njk
+++ b/src/components/subscription-signup-form.njk
@@ -69,11 +69,11 @@
                 id="contact-referral-source"
                 type="text"
                 name="referral_source"
-                placeholder="How did you find out about Mainmatter?"
+                placeholder="How did you find us?"
                 required
               />
               <label class="contact-form__label h4" for="contact-referral-source">
-                How did you find out about Mainmatter?
+                How did you find us?
               </label>
             </div>
             <button class="btn-primary btn-primary--white" type="submit">
