--- a/src/components/layouts/workshop.njk
+++ b/src/components/layouts/workshop.njk
@@ -174,11 +174,11 @@ layout: "base"
                 id="contact-referral-source"
                 type="text"
                 name="referral_source"
-                placeholder="How did you find out about Mainmatter?"
+                placeholder="How did you find us?"
                 required
               />
               <label class="contact-form__label h4" for="contact-referral-source">
-                How did you find out about Mainmatter?
+                How did you find us?
               </label>
             </div>
             <div class="contact-form__field">
