add basic json-ld data to pages

--- a/src/components/layouts/base.njk
+++ b/src/components/layouts/base.njk
@@ -1,6 +1,16 @@
 ---
 og:
   image: /assets/images/og-image.jpg
+type: page
+meta:
+  site:
+    logo:
+      src: /icon-512.png
+      width: 512
+      height: 512
+  language: en-US
+  image:
+    src: /icon-512.png
 ---
 
 <html lang="{{ config.lang }}" prefix="og: http://ogp.me/ns#">
