add organization info

--- a/src/components/global/meta.njk
+++ b/src/components/global/meta.njk
@@ -77,7 +77,8 @@
     },
     "url": pageUrl,
     "title": pageTitle,
-    "description": pageDesc
+    "description": pageDesc,
+    "organization": meta.organization
   }
 %}
 {% jsonLdScript schemaMeta, type, tags %}
