--- a/src/components/layouts/base.njk
+++ b/src/components/layouts/base.njk
@@ -5,12 +5,34 @@ type: page
 meta:
   site:
     logo:
-      src: /icon-512.png
+      src: https://mainmatter.com/icon-512.png
       width: 512
       height: 512
   language: en-US
   image:
-    src: /icon-512.png
+    src: https://mainmatter.com/icon-512.png
+  organization:
+    name: Mainmatter
+    legalName: Mainmatter GmbH
+    url: https://mainmatter.com
+    logo: https://mainmatter.com/icon-512.png
+    description: "Mainmatter is an engineering consultancy that helps clients solve their technology challenges via two key angles: leading expertise in a set of core technologies and experience in modern digital product development practices and innovation."
+    foundingDate: "2015"
+    founders:
+      - name: Marco Otte-Witte
+    address:
+      streetAddress: Hans-Sachs-Str. 12, 80469 München
+      postalCode: "80469"
+      addressCountry: Germany
+    contactPoint:
+      - telephone: "+498945213903"
+        availableLanguage:
+          - English
+          - German
+      - email: info@mainmatter.com
+        availableLanguage:
+          - English
+          - German
 ---
 
 <html lang="{{ config.lang }}" prefix="og: http://ogp.me/ns#">
