use post type for blog posts

--- a/src/components/layouts/post.njk
+++ b/src/components/layouts/post.njk
@@ -1,5 +1,8 @@
 ---
 layout: base
+eleventyComputed:
+  published: page.date,
+type: post
 ---
 
 {% from "image-aspect-ratio.njk" import imageAspectRatio %}
