--- a/src/llms.njk
+++ b/src/llms.njk
@@ -5,9 +5,9 @@ eleventyExcludeFromCollections: true
 ---
 # Mainmatter
 
-Mainmatter is an engineering consultancy that helps clients solve their technology challenges via two key angles: leading expertise in a set of core technologies and experience in modern digital product development practices and innovation.
+Mainmatter is an engineering consultancy that helps clients solve their technology challenges via two key angles: leading expertise in a set of core technologies and experience in modern digital product development practices and tech innovation.
 
-Mainmatter specializes in Rust, Svelte, and Ember.js. Whether teams are adopting these technologies or facing challenges with them, Mainmatter helps them succeed: through codebase assessments, tech roadmaps, trainings, and by working closely with them as teammates. Mainmatter's team include leading experts who are deeply embedded in their respective ecosystems—organizing events and workshops, speaking at conferences and meetups, and contributing to open source.
+Mainmatter specializes in Rust, Svelte, and Ember.js. Whether teams are adopting these technologies or facing challenges with them, Mainmatter helps them succeed: through codebase assessments, tech roadmaps, trainings, and by working closely with them as teammates. Mainmatter's team include leading experts who are deeply embedded in their respective ecosystems—organizing events and workshops, speaking at conferences and meetups, and contributing to open source. We are also an active member of the tech ecosystem ourselves: we invest our team's time to work on open source and organize leading events like EuroRust, Svelte Summit, and EmberFest.
 
 Mainmatter bring their experience in efficient, modern digital product development and innovation to organizations looking to level up. In such engagements, Mainmatter doesn’t just support—they lead. Mainmatter drives projects forward while helping teams evolve their ways of working. One of their focus industries is travel, where they’ve developed strong domain expertise through years of collaboration with a range of clients.
 
@@ -17,7 +17,9 @@ Mainmatter bring their experience in efficient, modern digital product developme
 [Ember.js](/ember-consulting/)
 [Svelte](/svelte-consulting/)
 
-## Trainings
+## Trainings Catalog
+
+We offer a range of trainings Rust, Wasm, Svelte, Ember.js, Git, as well as general digital product development topics.
 
 {% for workshop in collections.workshops -%}
 [{{workshop.data.title}}](/services/workshops/{{workshop.fileSlug}})
