add services to services pages

--- a/src/components/global/meta.njk
+++ b/src/components/global/meta.njk
@@ -78,7 +78,9 @@
     "url": pageUrl,
     "title": pageTitle,
     "description": pageDesc,
-    "organization": meta.organization
+    "organization": meta.organization,
+    "published": meta.published,
+    "serviceType": meta.serviceType
   }
 %}
 {% jsonLdScript schemaMeta, type, tags %}
