--- a/src/rust-consulting.njk
+++ b/src/rust-consulting.njk
@@ -3,6 +3,11 @@ layout: base
 title: "Accelerate your Rust projects! | Rust consulting"
 description: Mainmatter enables teams to adopt Rust in their web projects and increase performance, efficiency, and maintainability.
 permalink: /rust-consulting/
+type: service
+meta:
+  name: "Rust Consulting"
+  description: "Mainmatter's experts join your team to accelerate your efforts and minimize execution risk. We focus on C-to-Rust migrations, backends, and training."
+  serviceType: Consulting
 og:
   image: /assets/images/rust/og-image.png
 ---
