--- a/src/ember-consulting.njk
+++ b/src/ember-consulting.njk
@@ -3,6 +3,11 @@ layout: base
 title: "Team Up With Us for Ember! | Ember consulting"
 description: Temporarily extend your team with Europe's leading Ember experts. Speed up projects and remove long-standing issues – from refactoring to shipping new features.
 permalink: /ember-consulting/
+type: service
+meta:
+  name: "Ember.js Consulting"
+  description: "Mainmatter's experts join your team to accelerate your efforts and minimize execution risk. We future-proof Ember apps, migrate projects to Vite, and set up multi-framework architectures."
+  serviceType: Consulting
 og:
   image: /assets/images/ember/og-image.png
 ---
